# Ground-Based-Drone-Tracker

./: LICENSE  README.md
docs/: 01_system_overview.md  02_radar_setup.md  03_camera_setup.md  04_gimbal_setup.md  05_ekf_theory.md  06_software_install.md  07_calibration.md  08_tuning.md  09_troubleshooting.md
firmware/: awr1843_cfg.cfg
hardware/: bom.csv  mechanical_assembly.md  wiring_diagram.md
scripts/: check_hardware.sh  install.sh
software/ros2_ws/src/tracker/: package.xml  setup.py
software/ros2_ws/src/tracker/config/: params.yaml
software/ros2_ws/src/tracker/launch/: tracker.launch.py
software/ros2_ws/src/tracker/tracker/: camera_tracker.py  ekf.py  ekf_controller.py  gimbal_controller.py  radar_driver.py
tools/: calibrate_extrinsics.py  odrive_setup.py
